--- a/api-next-app/package.json
+++ b/api-next-app/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "aws-sdk": "^2.1542.0",
     "mongodb": "^6.3.0",
     "next": "14.0.4",
     "next-connect": "^1.0.0",
@@ -16,6 +17,7 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/aws-sdk": "^2.7.0",
     "@types/mongodb": "^4.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
