--- a/api-next-app/package.json
+++ b/api-next-app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "aws-sdk": "^2.1542.0",
+    "formidable": "^3.5.1",
     "mongodb": "^6.3.0",
     "next": "14.0.4",
     "next-connect": "^1.0.0",
@@ -18,6 +19,7 @@
   },
   "devDependencies": {
     "@types/aws-sdk": "^2.7.0",
+    "@types/formidable": "^3.4.5",
     "@types/mongodb": "^4.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
