--- a/api-next-app/package.json
+++ b/api-next-app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "aws-sdk": "^2.1542.0",
+    "cors": "^2.8.5",
     "formidable": "^3.5.1",
     "mongodb": "^6.3.0",
     "next": "14.0.4",
